Fix alignment of terminal close button.

--- a/css/terminal.css
+++ b/css/terminal.css
@@ -42,6 +42,7 @@
 .terminal-button-close
 {
     display: flex;
+    align-items: center;
 }
 
 .terminal-button-close::before
